# quantum-algorithms-simulation-engineering

./: .gitignore  IMPLEMENTATION_SCHEDULE.md  INTERVIEW_PITCH.md  Makefile  Quantum Algorithm and Simulation Engineering.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/01_bench_qiskit_vs_custom/: README.md
artifacts/01_benchmarks_qiskit_vs_custom/: README.md
artifacts/02_noise_and_shot_scaling/: README.md
artifacts/02_noise_shot_scaling/: README.md  TECHNICAL_MEMO.md
artifacts/03_vqa_gradients_iqp/: AUTO_REPORT.md  COMPARISON_TYING_VS_UNTIED.md  ONE_PAGER.md  README.md  TECHNICAL_MEMO.md
artifacts/04_transpilation_passes/: README.md
configs/: bench_qiskit_vs_custom_full_001.yaml  bench_qiskit_vs_custom_micro.yaml  example_bench_qiskit_vs_custom.yaml  example_grad_var.yaml  example_noise_shot_scaling.yaml  example_transpile.yaml  grad_variance_full_sweep_001.yaml  grad_variance_k40_n12d10.yaml  grad_variance_k40_n4d2.yaml  grad_variance_k40_n8d6.yaml  grad_variance_micro_sweep.yaml  grad_variance_probe_untied.yaml  grad_variance_untied_sweep_001.yaml  noise_shot_scaling_full_001.yaml  noise_shot_scaling_micro.yaml  schema.md
scripts/: make_grad_variance_comparison.py  make_grad_variance_overlay.py  make_grad_variance_report.py  smoke_run.ps1
src/quantum_swe_artifacts/: __init__.py  __main__.py  cli.py  env.py  logging_utils.py  plotting.py  registry.py
tests/: test_bench_qiskit_vs_custom.py  test_circuit_generators.py  test_cli_smoke.py  test_logging_and_plots.py  test_noise_shot_scaling.py
(+14 files in other folders)
